objects/Account_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Account_Lookup1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Hierarchy</relationshipLabel>
        <relationshipName>Account_Hierarchy</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cust_HierType_SalesOrg_DistChann_Div__c</fullName>
        <description>External ID used for integration</description>
        <externalId>true</externalId>
        <label>IDEXX Unique Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy_Type__c</fullName>
        <label>Customer Hierarchy Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Higher_Level_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Higher Level Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Hierarchy (Account)</relationshipLabel>
        <relationshipName>Account_Hierarchy1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Higher_Level_Customer_Number__c</fullName>
        <label>Higher Level Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Higher_Level_Sales_Organization__c</fullName>
        <label>Higher-level sales organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Higher_level_distribution_channel__c</fullName>
        <label>Higher-level distribution channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Higher_level_division__c</fullName>
        <label>Higher-level division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Number__c</fullName>
        <label>SAP Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>